RH-2009-02-25-0: Bugfix:     Hedeby: mpjslo_parallel_and_array_job failed if after
                             the resource movement the resource request quantity was 
                             not immediately correct.
                             Implemented a cylce which polls the resource request.
                 Review:     AF

JG-2009-02-20-0: Enhancem.:  new menu item 34 cleaning all hosts known in the
                             testsuite host configuration (kills SGE daemons,
                             cleans /var/sgeCA, local spool directories ...)
                 Review:     RD

CR-2009-02-19-1: Enhancem.:  added more logging output for qsub test
                 Review:     MD

CR-2009-02-19-0: Enhancem.:  o added test for IZ 2895
                             o additional string list parameter for
                               logfile_wait() procedure
                 Issue:      279
                 Review:     MD

JG-2009-02-19-0: Bugfix:     Minor fixes and cleanup to 
                             - issue_1330 test with BDB RPC spooling
                             - jsv_ge test
                             - qmake test
                             - sharetree test
                 Review:     RD

RM-2009-02-18-0: Enhancem.:  test for issue 619
                 Review:     MG

AP-2009-02-18-0: Bugfix:     arco_compile fix
                 Belongs to: AP-2009-02-11-0

RD-2009-02-18-0: Bugfix:     adjusted jemalloc test
                 Review:     JG

CR-2009-02-17-0: Bugfix:     improved race condition in test "issue_2735"
                             to recognize the issue always
                 Review:     RD

CR-2009-02-16-1: Cleanup:    cleanup of test "issue_2743"
                 Review:     RD

CR-2009-02-16-0: Enhancem.:  o wait_for_load_from_all_queues():
                               new default parameter: raise_error
                             o host_conf_get_suited_hosts():